# gnome-shell-screenshotlocations-extension

./: CONTRIBUTING.md  meson.build  package.json
po/: POTFILES  ms.po  screenshotlocations.timur@linux.com.pot
screenshotlocations.timur@linux.com/: extension.js  metadata.json  prefs.js  prefs.ui
src/: extension.js  meson.build  metadata.json.in  prefs.js  prefs.ui
